Bug 1443561 - Part 1: Make additional backgrounds alignment relative to toolbox. r=jaws
MozReview-Commit-ID: 5gjrzZiLx0Q

UltraBlame original commit: 6086b5e84d5b5b89629f9b56c51de4e636aef6b6

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -134,6 +134,62 @@ navigator
 -
 toolbox
 :
+-
+moz
+-
+lwtheme
+{
+background
+-
+image
+:
+var
+(
+-
+-
+lwt
+-
+additional
+-
+images
+)
+;
+background
+-
+position
+:
+var
+(
+-
+-
+lwt
+-
+background
+-
+alignment
+)
+;
+background
+-
+repeat
+:
+var
+(
+-
+-
+lwt
+-
+background
+-
+tiling
+)
+;
+}
+#
+navigator
+-
+toolbox
+:
 :
 after
 {
